hphp/hack/test/typecheck/foreach_kv_list_async2.php.exp
File "foreach_kv_list_async2.php", line 20, characters 9-10:
Invalid argument (Typing[4110])
File "foreach_kv_list_async2.php", line 12, characters 14-19:
This is a string
File "foreach_kv_list_async2.php", line 14, characters 48-50:
It is incompatible with an int
